public/css/custom.css
body {
	font-family: "Avenir Next","Helvetica Neue",Helvetica,Arial,sans-serif;
	font-size: 14px;
}
a {
	color: #F5A623;
	-webkit-transition: all .1s;
	-moz-transition: all .1s;
	-ms-transition: all .1s;
	-o-transition: all .1s;
	transition: all .1s;
}

h1,h2,h3,h4,h5,h6 {
	color: #F5A623;

}

.container {
	margin-top: .5em;
}

.container .jumbotron {
	background-image: url('../img/stars.jpg');
	background-repeat: no-repeat;
	text-align: center;
	margin-bottom: 1em;
	border-radius: 0px;
	padding-top: 30px;
	padding-bottom: 30px;
	/*background-position: center;*/
}

.jumbotron h1, .jumbotron .h1 {
	color: #F5A623;
	font-weight: 600;
	font-size: 2em;
	text-shadow: 0px 1px 4px rgba(0,0,0,0.50);
}

.jumbotron p {
	color: #fff;
	font-size: 1em;
	font-weight: 400;
	text-shadow: 0px 1px 4px rgba(0,0,0,0.50);
}

.logo {
	height: 52px;
	width: 198px;
}

.navbar-default {
	background-color: transparent;
	border-color: transparent;
	margin-bottom: 0px;
}

.twitter {
	text-indent: -9999px;
	background-image: url('../img/twitter.png');
	height: 42px;
	width: 52px;
	background-size: 50%;
	background-repeat: no-repeat;
	background-position: 50% 20%;
	margin: 6px 0 -6px;
}

.twitter:hover {
	background-image: url('../img/twitter-hover.png');	
}

.nav>li>a.twitter:hover, .nav>li>a.twitter:focus {
	background-color: transparent
}

.btn-sign-up {
	border-radius: 6px;
	border: 2px solid #FFFFFF;
	font-weight: 600;
	background-color: transparent;
	color: #FFFFFF;
	line-height: 31px;
	letter-spacing: 1px;
	text-shadow: 0px 1px 4px rgba(0,0,0,0.50);
}

.btn-sign-up:hover {
	/*background-color: #F5BC23;*/
	background-color: rgba(66,139,202,0.8);
	border-color: #fff;
	color: #fff;
	text-shadow: none;
}

.brands {
	margin-bottom: 3em;
}

.brands h2 {
	text-align: center;
	margin-bottom: 1em;
}

img.BWFilter.BWfade {
	display: none;
}

.bwWrapper {
	position: relative;
	display: block;
	margin-bottom: 10px;
}


/***Media Queries***/

@media (max-width: 767px) {

 } 

@media (min-width: 768px) {

 	.header {
 		height: 70px;
 	}

 	.navbar-default {
		margin-bottom: .5em;
	}
	.motionry-logo {
		background-size: 80%;
	}

	.jumbotron h1, .jumbotron .h1 {
		font-size: 2.5em;
	}
	.jumbotron p {
		font-size: 1.2em;
	}
	.brand-column {
		padding: 0 5px;	
	}

	img.BWFilter.BWfade {
		display: block; 
	}

	.nav-wrap {
		padding-top: 10px;
	}
}

@media (min-width: 768px) and (max-width: 991px) {
 
}

@media (min-width: 992px) and (max-width: 1199px) {
 
  
}
@media (min-width: 1200px) {

   
}

